--- a/css/custom.css
+++ b/css/custom.css
@@ -36,3 +36,10 @@
 .face-button:hover .face-primary {
   margin-top: -64px;
 }
+
+.call{
+  background-color: #e43;
+  width:200;
+  height:200;"
+
+}
